QA-12314 refactor: PurposeTemplateResolver